Bump Pulsar to 3.0.0.1 (#773)
* Bump pulsar to 3.0.0-rc1

* Adopt the new API from https://github.com/apache/pulsar/pull/19975

* Fix tests

* Bump to 3.0.0.1

---------

Co-authored-by: Rui Fu <freeznet@users.noreply.github.com>